@@ -1,6 +1,8 @@
 export(archetypes)
 export(archetypesFamily)
+export(archmap)
 export(as.archetypes)
+export(atypes_projection)
 export(bestModel)
 export(jd)
 export(moviepcplot)
@@ -11,6 +13,7 @@ export(panorama)
 export(pcplot)
 export(robustArchetypes)
 export(rss)
+export(simplex_projection)
 export(skeletonplot)
 export(stepArchetypes)
 export(weightedArchetypes)
