@@ -1,0 +1,25 @@
+\name{simplex_projection}
+\alias{archmap_projections}
+\alias{atypes_projection}
+\alias{simplex_projection}
+\title{Archetypal map projections}
+\usage{
+  simplex_projection(x, r = 10)
+
+  atypes_projection(x)
+}
+\arguments{
+  \item{x}{Archetypes matrix}
+
+  \item{r}{Radius of the simplex projection}
+}
+\value{
+  Matrix with the projected archetypes
+}
+\description{
+  Archetypal map projections
+}
+\seealso{
+  Other archmap: \code{\link{archmap}}
+}
+
