@@ -4,13 +4,15 @@ Changes in archetypes version 2.1-0
   o Roxygen2-ified; added the Build-dep field to the DESCRIPTION
     file.
 
+  o Added Author@R field to the DESCRIPTION file.
+
   o Removed deprecated functions.
 
   o Cleaned vignette 'archetypes.Rnw' and 'inst/doc' folder.
 
   o Added predict function for 'original' archetypes.
 
-  o Added archetype maps; based on cody by Friedrich Leisch.
+  o Added archetypal maps; based on code by Friedrich Leisch.
 
 
 Changes in archetypes version 2.0-2
